plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'bitxon.spring'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_20

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
	jvmArgs('--enable-preview')
}

bootRun {
	jvmArgs('--enable-preview')
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('--enable-preview')
	options.compilerArgs.add('-Xlint:preview')
}
